# tauri-leptos-example

./: Cargo.toml  README.md  index.html  style.css
src/: app.rs  main.rs
src-tauri/: tauri.conf.json
